# langstage-core

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/adr/: 0002-execute-event-layer-retirement.md  0003-deprecate-the-event-layer.md  0004-consolidate-preflight-and-workspace-into-core.md  0005-apply-workspace-in-core.md  0006-operate-agent-from-workspace-cwd.md
examples/: __init__.py  agent.py  fastapi_websocket.py  jupyter_example.ipynb
src/langgraph_stream_parser/: __init__.py  events.py  parser.py
src/langgraph_stream_parser/adapters/: __init__.py  session.py
src/langgraph_stream_parser/agui/: __init__.py  __main__.py
src/langgraph_stream_parser/demo/: __init__.py  agent.py  stub.py
src/langgraph_stream_parser/extractors/: __init__.py  builtins.py
src/langgraph_stream_parser/handlers/: messages.py  updates.py
src/langgraph_stream_parser/host/: __init__.py  config.py  workspace.py
src/langgraph_stream_parser/tasks/: __init__.py  runner.py  store.py
src/langstage_core/: __init__.py  resume.py
src/langstage_core/adapters/: __init__.py  session.py
src/langstage_core/agui/: __init__.py  __main__.py  collect.py  verify.py
src/langstage_core/demo/: __init__.py  agent.py  stub.py  tools.py
src/langstage_core/extractors/: base.py  builtins.py
src/langstage_core/host/: __init__.py  __main__.py  config.py  loader.py  workspace.py
src/langstage_core/tasks/: __init__.py  runner.py  state.py  store.py  tools.py
tests/: __init__.py  test_agent_name.py  test_agui.py  test_agui_cli.py  test_agui_frames.py  test_agui_matrix.py  test_collect.py  test_compat.py  test_demo.py  test_demo_stub.py  test_demo_tools.py  test_dual_mode.py  test_example_docs.py  test_example_fastapi.py  test_extractors.py  test_generic_extractor.py  test_host.py  test_host_cli.py  test_host_config.py  test_interrupt_normalize.py  test_multi_mode_content_fallback.py  test_public_api.py  test_session_adapter.py  test_session_agui.py  test_tasks.py  test_verify.py  test_wire_contract.py  test_workspace_apply.py
tests/fixtures/: __init__.py  mocks.py
