[project]
name = "langgraph-stream-parser"
version = "0.6.3"
description = "Universal parser + host layer for LangGraph agents — typed stream events, agent-spec loading, layered config, an AG-UI bridge, and an async task-delegation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kedar Dabhadkar"}
]
keywords = [
    "langgraph",
    "langchain",
    "streaming",
    "parser",
    "ai",
    "agents",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Base import chain imports `langchain_core.tools` at module top level
    # (langgraph_stream_parser.tasks.tools). This must be a hard dependency so a
    # bare `pip install langgraph-stream-parser` can `import langgraph_stream_parser`.
    "langchain-core>=1.4",
]

[project.optional-dependencies]
jupyter = [
    "rich>=13.0",
    "ipython>=8.0",
]
fastapi = [
    "fastapi>=0.100",
]
demo = [
    "deepagents>=0.3",
]
agui = [
    # Adopt the official, MIT, standalone LangGraph->AG-UI adapter for the wire.
    # [fastapi] pulls the ASGI endpoint helper; uvicorn serves it.
    "ag-ui-langgraph[fastapi]>=0.0.41",
    "uvicorn>=0.30",
]
real = [
    "langchain-openai>=0.2",
    "langgraph>=1.1.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "langgraph>=1.1.0",
    "langchain-core>=1.4.0",
    "rich>=13.0",
    "fastapi>=0.100",
    "httpx>=0.25",
    "ag-ui-langgraph[fastapi]>=0.0.41",
    "uvicorn>=0.30",
]

[project.scripts]
langstage-agui = "langgraph_stream_parser.agui.__main__:main"

[project.urls]
Homepage = "https://github.com/dkedar7/langgraph-stream-parser"
Documentation = "https://github.com/dkedar7/langgraph-stream-parser#readme"
Repository = "https://github.com/dkedar7/langgraph-stream-parser"
Issues = "https://github.com/dkedar7/langgraph-stream-parser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_stream_parser"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "real_model: hits a live LLM via OpenRouter (opt-in; skips without OPENROUTER_API_KEY)",
]

[tool.coverage.run]
source = ["src/langgraph_stream_parser"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
